--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bg-gray-900 text-white font-sans">
 
   <!-- Portada principal -->
-  <section class="h-screen flex flex-col justify-center items-center bg-gradient-to-b from-purple-700 to-gray-900 text-center p-6">
+  <section class="min-h-screen flex flex-col justify-center items-center bg-gradient-to-b from-purple-700 to-gray-900 text-center p-6">
     <h1 class="text-5xl sm:text-6xl font-extrabold mb-6">🎮 Historia de los Videojuegos</h1>
     <p class="text-xl sm:text-2xl mb-8">Desde los primeros experimentos hasta el gaming moderno</p>
     <a href="#1" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-3 px-6 rounded-lg transition">Explorar la historia</a>
@@ -42,6 +42,7 @@
 
   <!-- Contenido -->
   <main class="ml-0 md:ml-72 p-6 md:p-10 space-y-20">
+
     <!-- 1. Orígenes -->
     <section id="1">
       <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">1. Los orígenes (1950-1970)</h2>
@@ -58,19 +59,110 @@
       </div>
     </section>
 
-    <!-- Resto de secciones como antes, solo asegurándose de que las imágenes tengan class="img-style" -->
-    
-  </main>
+    <!-- 2. Arcades -->
+    <section id="2">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">2. La era dorada de los arcades (1970-1980)</h2>
+      <p class="text-gray-300">Durante los 70 y 80 los salones recreativos se convirtieron en lugares de encuentro para millones de jóvenes. Los videojuegos se volvieron un fenómeno cultural.</p>
+      <ul class="list-disc ml-6 mt-3 text-gray-200">
+        <li><b>Pong (1972)</b> – Atari, uno de los primeros grandes éxitos.</li>
+        <li><b>Space Invaders (1978)</b> – revolucionó los arcades.</li>
+        <li><b>Pac-Man (1980)</b> – uno de los iconos más reconocibles.</li>
+        <li><b>Donkey Kong (1981)</b> – introdujo a Mario como personaje.</li>
+      </ul>
+      <div class="flex justify-center gap-5 mt-5">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Pac-Man_gameplay.png"
+             alt="Pac-Man"
+             class="img-style">
+      </div>
+    </section>
 
-  <!-- Script para menú móvil -->
-  <script>
-    const btn = document.getElementById('menu-btn');
-    const sidebar = document.getElementById('sidebar');
+    <!-- 3. Boom de consolas -->
+    <section id="3">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">3. El boom de las consolas (1980-1990)</h2>
+      <p class="text-gray-300">Nintendo y Sega lideraron el mercado con consolas inolvidables. Se crearon franquicias que hoy siguen activas.</p>
+      <ul class="list-disc ml-6 mt-3 text-gray-200">
+        <li><b>Nintendo NES y SNES</b> – con <i>Super Mario Bros.</i> y <i>The Legend of Zelda</i>.</li>
+        <li><b>Sega Genesis</b> – introdujo a <i>Sonic the Hedgehog</i>.</li>
+      </ul>
+      <div class="flex justify-center gap-5 mt-5">
+        <img src="https://media.spokesman.com/photos/2016/02/16/mariO.jpg"
+             alt="Super Mario"
+             class="img-style">
+      </div>
+    </section>
 
-    btn.addEventListener('click', () => {
-      sidebar.classList.toggle('-translate-x-full');
-    });
-  </script>
+    <!-- 4. Revolución 3D -->
+    <section id="4">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">4. Los 3D y el salto tecnológico (1990-2000)</h2>
+      <p class="text-gray-300">La llegada de los gráficos 3D cambió por completo la forma de jugar. Sony entró al mercado y Nintendo apostó por nuevas experiencias.</p>
+      <ul class="list-disc ml-6 mt-3 text-gray-200">
+        <li><b>PlayStation (1994)</b> – popularizó juegos como <i>Final Fantasy VII</i> y <i>Metal Gear Solid</i>.</li>
+        <li><b>Nintendo 64</b> – trajo joyas como <i>Super Mario 64</i> y <i>Pokémon Stadium</i>.</li>
+      </ul>
+      <div class="flex justify-center mt-5">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Nintendo-64-wController-L.jpg/1200px-Nintendo-64-wController-L.jpg"
+             alt="Nintendo 64"
+             class="img-style">
+      </div>
+    </section>
 
-</body>
-</html>
+    <!-- 5. Online y HD -->
+    <section id="5">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">5. La era online y HD (2000-2010)</h2>
+      <p class="text-gray-300">Consolas más potentes introdujeron el juego en línea y los gráficos HD.</p>
+      <ul class="list-disc ml-6 mt-3 text-gray-200">
+        <li><b>Xbox Live</b> – revolucionó el multijugador en línea.</li>
+        <li><b>PlayStation 2 y 3</b> – grandes catálogos de juegos.</li>
+        <li><b>Nintendo Wii</b> – innovó con controles de movimiento.</li>
+      </ul>
+      <div class="flex justify-center mt-5">
+        <img src="https://i5.walmartimages.com/asr/09f59f8f-617d-4f29-b067-b6f0c204908a_1.86cd92c32afb3d64e4f578fa1d54a60a.jpeg"
+             alt="Nintendo Wii"
+             class="img-style">
+      </div>
+    </section>
+
+    <!-- 6. Gaming moderno -->
+    <section id="6">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">6. Gaming moderno (2010-actualidad)</h2>
+      <p class="text-gray-300">Hoy en día, los videojuegos mueven más dinero que el cine y la música juntos. Los esports y el mercado móvil también crecieron.</p>
+      <ul class="list-disc ml-6 mt-3 text-gray-200">
+        <li>Consolas: <b>PS4, PS5, Xbox One, Xbox Series X/S</b> y <b>Nintendo Switch</b>.</li>
+        <li>Explosión de los <b>esports</b> con títulos como <i>League of Legends</i> y <i>Fortnite</i>.</li>
+        <li>Gran mercado de <b>juegos móviles</b> como <i>Free Fire</i> y <i>Clash of Clans</i>.</li>
+      </ul>
+      <div class="flex justify-center mt-5">
+        <img src="https://i5.walmartimages.com/seo/PlayStation-5-Console_b29e7500-cac2-4d1f-b4aa-5e0ebb3de124.c0b04249d968e2c1e5d25799b96ee0e3.jpeg"
+             alt="PlayStation 5"
+             class="img-style">
+      </div>
+    </section>
+
+    <!-- 7. Iconos -->
+    <section id="7">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">7. Iconos del gaming</h2>
+      <p class="text-gray-300">Algunos personajes se convirtieron en símbolos de generaciones enteras:</p>
+      <ul class="list-disc ml-6 mt-3 text-gray-200">
+        <li><b>Mario</b> – rostro de Nintendo y del gaming en general.</li>
+        <li><b>Sonic</b> – ícono de Sega.</li>
+        <li><b>Link</b> – protagonista de <i>The Legend of Zelda</i>.</li>
+        <li><b>Lara Croft</b> – figura clave en <i>Tomb Raider</i>.</li>
+      </ul>
+    </section>
+
+    <!-- 8. Marcas -->
+    <section id="8">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">8. Marcas tecnológicas</h2>
+      <p class="text-gray-300">Varias compañías han marcado la evolución de los videojuegos:</p>
+      <ul class="list-disc ml-6 mt-3 text-gray-200">
+        <li><b>Nintendo</b> – Innovación en portátiles y franquicias clásicas.</li>
+        <li><b>Sony</b> – Dominio con la línea PlayStation.</li>
+        <li><b>Microsoft</b> – Xbox y el ecosistema online con Xbox Game Pass.</li>
+        <li><b>Atari</b> – pioneros en la industria de consolas.</li>
+      </ul>
+    </section>
+
+    <!-- 9. Conclusión -->
+    <section id="9">
+      <h2 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-4">9. Conclusión</h2>
+      <p class="text-gray-300">La historia de los videojuegos es un reflejo de cómo la tecnología, la creatividad y la cultura se entrelazan. Desde simples experimentos hasta mundos virtuales masivos, el gaming
